Fixed modals going off-screen on mobile

--- a/client/src/components/modal/ModalDialog.css
+++ b/client/src/components/modal/ModalDialog.css
@@ -9,8 +9,8 @@
   padding: 20px;
   min-width: 400px;
   min-height: 200px;
-  max-width: 100vw;
-  max-height: 100vh;
+  max-width: calc(100vw - 30px);
+  max-height: calc(100vh - 30px);
   overflow-y: auto;
 }
 
@@ -46,5 +46,6 @@
     top: 15px;
     right: 15px;
     transform: translate(0, 0);
+    min-width: auto;
   }
 }
