--- a/client/src/css/styles.scss
+++ b/client/src/css/styles.scss
@@ -180,12 +180,6 @@ a:focus {
   margin-right: 8px;
 }
 
-.login-form {
-  @media (min-width: 768px) {
-    width: 370px;
-  }
-}
-
 .vr {
   flex-shrink: 0;
 }
